# TP1Python

./: pyproject.toml
