[tool.poetry]
name = "tp1"
version = "0.1.0"
description = "Collection des scripts réalisés pour le TP1 de Ismail Bennis."
authors = ["Julien Mauroy <julien.mauroy@uha.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
